pull/120/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/BFEBlockCommand.rst.txt
.. vale off



:class:`BFEBlockCommand`
========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.BFEBlockCommand

   Bases: :py:obj:`object`


   
   Represents a BFEBLOCK command.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: BFEBlockCommand

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ElementBodyForceCount`
            - Gets the number of element body-force loads.
          * - :py:attr:`~ElementBodyForces`
            - Gets the element body-force loads.
          * - :py:attr:`~Index`
            - Gets the command index.
          * - :py:attr:`~Lab`
            - Gets the label.
          * - :py:attr:`~Name`
            - Gets the command name.







Property detail
---------------
.. py:property:: ElementBodyForceCount
   :type: Optional[int]


   
   Gets the number of element body-force loads.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementBodyForces
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.FE.CDB.CommandElementBodyForce]]


   
   Gets the element body-force loads.
















   ..
       !! processed by numpydoc !!

.. py:property:: Index
   :type: Optional[int]


   
   Gets the command index.
















   ..
       !! processed by numpydoc !!

.. py:property:: Lab
   :type: Optional[str]


   
   Gets the label.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Gets the command name.
















   ..
       !! processed by numpydoc !!







.. vale on